# asb-scraper

./: Cargo.toml
backend/: Cargo.toml
backend/src/: handlers.rs  lib.rs  main.rs  scraper.rs
backend/src/scraper/: course.rs  courses_list.rs  home.rs  lunch_menus.rs  schedule.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.d.ts  app.html
frontend/src/css/: schedule.css
frontend/src/lib/: GradeTable.svelte  Navbar.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/grades/: +page.svelte  +page.ts
frontend/src/routes/grades/[student]/[year]/[id]/: +page.svelte  +page.ts
frontend/src/routes/schedule/: +page.svelte  +page.ts
src/: handlers.rs  lib.rs  main.rs  scraper.rs
src/scraper/: course.rs  courses_list.rs  home.rs  schedule.rs
