[package]
name = "betterasb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies"] }
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
